--- a/css/style.css
+++ b/css/style.css
@@ -1624,5 +1624,8 @@ h1, h2, h3, h4, h5, h6, figure {
 .js .animate-box {
   opacity: 0;
 }
+.col-md-2{
+  margin-bottom: 30px;
+}
 
 /*# sourceMappingURL=style.css.map */
