--- a/pay/i.css
+++ b/pay/i.css
@@ -10,9 +10,11 @@ body{
 	width: 20%;
 	height: 50px;
 	text-align: center;
-	margin-bottom: 2%;
+	//margin-bottom: 2%;
 	border: 0.1rem solid grey;
 	font-size: 0;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .one .td{
@@ -25,14 +27,31 @@ body{
 	font-size: 0.7rem;
 }
 
-#passwd{
-	margin: 5%;
+.chpw{
+	margin-top: 5%;
+	margin-bottom: 2%;
+}
+
+.form-control{
+	width: 70%;
+	margin: auto;
 }
 
 nav{
 	display: inline-block;
 }
 
+.head{
+	font-size: 1rem;
+}
+
+#tab{
+	padding-top: 3%;
+}
+
+.btn{
+	width: 25%;
+}
 
 @media screen and (min-width: 500px){
 	body{
@@ -41,11 +60,12 @@ nav{
 
 
 	.one{
-		width: 8%;
+		width: 14%;
 	}
 
-	#passwd{
-		margin: 3%;
+	.chpw{
+		margin-top: 3%;
+		margin-bottom: 1%;
 	}
 
 	.head{
@@ -55,6 +75,32 @@ nav{
 	#tab{
 		width: 70%;
 		margin: auto;
+		padding-top: 1.5%;
 	}
 
+	.form-control{
+		width: 50%;
+	}
+
+	.btn{
+		width: 20%;
+	}
+}
+
+@media screen and (min-width: 1280px){
+	body{
+		padding-top: 5%;
+	}
+
+	.one{
+		width: 8%;
+	}
+
+	.form-control{
+		width: 15%;
+	}
+
+	.btn{
+		width: 15%;
+	}
 }
