--- a/fgw/tt.css
+++ b/fgw/tt.css
@@ -140,6 +140,9 @@ tbody th{
 	background-color: #e9ecef;
 	border-top: none;
 }
+.monthpicker td.active{
+	background-color: #e9ecef;
+}
 #monthpicker{
 	max-width: 25%;
 }
