--- a/fgw/tt.css
+++ b/fgw/tt.css
@@ -101,6 +101,9 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.custom-checkbox{
+	text-align: left;
+}
 
 th, td{
 	text-align: center;
