--- a/fgw/tt.css
+++ b/fgw/tt.css
@@ -74,12 +74,8 @@ body {
   margin: 0 auto;
   text-align: center;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-signin .form-signin-heading {
   margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: 400;
 }
 .form-signin .form-control {
   position: relative;
@@ -91,17 +87,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-.custom-checkbox{
+.form-signin .custom-checkbox{
 	text-align: left;
 }
 
