--- a/fgw/css/dot.css
+++ b/fgw/css/dot.css
@@ -121,6 +121,17 @@ tbody th{
 	max-height: 38px;
 	cursor: pointer;
 }
+#progress #popimg{
+	top: 50%;
+	left: 50%;
+}
+#progress #popimg img{
+	width: 100%;
+}
+#progress #popimg .close{
+	top: 2%;
+	right: 2%;
+}
 .monthpicker{
 	max-width: 17%;
 }
