--- a/fgw/css/dot.css
+++ b/fgw/css/dot.css
@@ -158,3 +158,9 @@ tbody th{
 	background-color: #e9ecef;
 	border-top: none;
 }
+#layer{
+	top:0;
+	left:0;
+	background-color: rgba(0, 0, 0, 0.3);
+	
+}
