separate project and progress html into two tables in progress.php, and move dates dropdown to progress html table

--- a/fgw/css/dot.css
+++ b/fgw/css/dot.css
@@ -99,8 +99,12 @@ tbody th{
 	font-size: 0.8rem;
 }
 
-#progress #dates{
+#progress #dates0{
 	top: 18%;
+	right: 2%;
+}
+#progress #dates{
+	top: 10px;
 	right: 2%;
 }
 #setting #settings{
@@ -113,7 +117,7 @@ tbody th{
 #setting main .input-group-text{
 	width:100%;
 }
-#progress th{
+#progress tbody th{
 	width:8%;
 }
 #progress td .img-fluid{
